mancala-kalah/deploy/cloud/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: default
spec:
  type: LoadBalancer    # el proveedor asigna IP externa automáticamente
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
