mancala-kalah/deploy/cloud/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
