mancala-kalah/deploy/cloud/motor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: motor-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: motor
  ports:
    - port: 9000
      targetPort: 9000
